Fixes nav drawer top gap

--- a/src/components/Header/SiteNav/SiteNav.module.css
+++ b/src/components/Header/SiteNav/SiteNav.module.css
@@ -56,6 +56,7 @@
   .nav-container {
     position: fixed;
     left: 0;
+    top:0;
     margin: 0;
     padding-top: 30px;
     justify-content: flex-start;
